--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#F7A324</color>
+    <color name="pink">#cc5200</color>
+    <color name="grey">#E9E9E9</color>
+
+
+
+
 </resources>
