--- a/app/src/main/res/layout/activity_escrever_mensagens.xml
+++ b/app/src/main/res/layout/activity_escrever_mensagens.xml
@@ -1,38 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  tools:context=".EscreverMensagens">
-
-  <TextView android:id="@+id/text_message"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="20sp"
-    android:text="Escreva uma mensagem:" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".EscreverMensagens">
 
-  <EditText android:id="@+id/edit_message"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="15sp"
-    android:hint="Escreva aqui..." />
+    <TextView
+        android:id="@+id/text_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:text="@string/text_message"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="35dp"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-  <Button android:id="@+id/show_message"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="20sp"
-    android:text="Mostrar mensagem" />
+    <TextView
+        android:id="@+id/written_morse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:layout_marginBottom="72dp"
+        android:text=""
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/text_message"
+        tools:layout_editor_absoluteX="5dp" />
 
-  <TextView android:id="@+id/message_displayer"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="25sp"
-    android:text="" />
+    <TextView
+        android:id="@+id/written_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:layout_marginBottom="72dp"
+        android:text=""
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/written_morse"
+        tools:layout_editor_absoluteX="5dp" />
 
-</LinearLayout>
+
+    <Button
+        android:id="@+id/buttonmorse"
+        android:layout_width="135dp"
+        android:layout_height="94dp"
+        android:layout_marginBottom="28dp"
+        android:backgroundTint="@color/orange"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <Button
+        android:id="@+id/buttondel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/ic_backspace_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@id/buttonmorse"
+        app:layout_constraintStart_toEndOf="@id/buttonmorse" />
+
+    <Button
+        android:id="@+id/buttonspace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/ic_space_bar_black_24dp"
+
+        app:layout_constraintBottom_toBottomOf="@id/buttonmorse"
+        app:layout_constraintEnd_toStartOf="@id/buttonmorse" />
+
+
+
+    <Button
+        android:id="@+id/buttonhome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/ic_home_black_24dp"
+
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/buttonspace" />
+
+    <Button
+        android:id="@+id/buttoncontact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/ic_contacts_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/buttondel" />
+
+
+</android.support.constraint.ConstraintLayout>
