--- a/app/src/main/res/layout/activity_mensagens_prontas.xml
+++ b/app/src/main/res/layout/activity_mensagens_prontas.xml
@@ -1,66 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  tools:context=".MensagensProntas">
-
-  <TextView android:id="@+id/written_messages"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="25sp"
-    android:text="Escolha uma mensagem pronta:" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MensagensProntas">
 
-  <TextView android:id="@+id/written_message1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="25sp"
-    android:text="SOS"
-    android:background="@drawable/rectangle"/>
+    <TextView
+        android:id="@+id/written_messages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/msg"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toTopOf="@+id/written_message1"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
 
-  <!--<TextView android:id="@+id/written_message2"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="5sp"-->
-    <!--android:textSize="25sp"-->
-    <!--android:text="Estou com sede"-->
-    <!--android:background="@drawable/rectangle"/>-->
-
-  <!--<TextView android:id="@+id/written_message3"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="5sp"-->
-    <!--android:textSize="25sp"-->
-    <!--android:text="Estou sentindo dor"-->
-    <!--android:background="@drawable/rectangle"/>-->
-
-  <!--<TextView android:id="@+id/written_message4"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="5sp"-->
-    <!--android:textSize="25sp"-->
-    <!--android:text="Por favor, venha para cá"-->
-    <!--android:background="@drawable/rectangle"/>-->
-
-  <!--<TextView android:id="@+id/written_message5"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="5sp"-->
-    <!--android:textSize="25sp"-->
-    <!--android:text="Preciso ir ao banheiro"-->
-    <!--android:background="@drawable/rectangle"/>-->
-
-  <TextView android:id="@+id/chosen_message"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    android:textSize="30sp"
-    android:textStyle="bold"
-    android:text=""/>
+    <TextView
+        android:id="@+id/written_message1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:background="@drawable/text"
+        android:text="@string/msg1"
+        android:backgroundTint="@color/pink"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/written_messages"
+        tools:layout_editor_absoluteX="5dp" />
 
 
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/chosen_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:text=""
+        android:textSize="25sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="-7dp"
+        tools:layout_editor_absoluteY="361dp"
+        app:layout_constraintTop_toBottomOf="@id/written_message1"/>
+
+
+    <Button
+        android:id="@+id/buttonnext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_contacts_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintStart_toEndOf="@id/buttonback" />
+
+    <Button
+        android:id="@+id/buttonback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/ic_home_black_24dp"
+        app:layout_constraintEnd_toStartOf="@+id/buttonnext"
+         />
+
+
+</android.support.constraint.ConstraintLayout>
