--- a/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -1,31 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  tools:context=".PaginaInicial">
-
-  <Button android:id="@+id/button1_example"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150sp"
-    android:layout_margin="10sp"
-    android:textSize="30sp"
-    android:text="Escrever mensagem" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/grey"
+    tools:context=".PaginaInicial">
 
-  <Button android:id="@+id/button2_example"
-    android:layout_width="match_parent"
-    android:layout_height="150sp"
-    android:layout_margin="10sp"
-    android:textSize="30sp"
-    android:text="Mensagens prontas" />
 
-  <Button android:id="@+id/button3_example"
-    android:layout_width="match_parent"
-    android:layout_height="150sp"
-    android:layout_margin="10sp"
-    android:textSize="30sp"
-    android:text="Tradutor" />
+    <TextView
+        android:id="@+id/writeMsg"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_margin="20sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/text"
+        android:text="@string/botao1"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        tools:text="Escrever mensagem" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/defaultMsg"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="20sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/text"
+        android:backgroundTint="@color/pink"
+        android:text="@string/botao2"
+        android:textScaleX="1"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/writeMsg"
+        tools:text="Mensagens Prontas" />
+
+
+    <TextView
+        android:id="@+id/dictionaire"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="20sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/text"
+        android:text="@string/botao3"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/defaultMsg"
+        tools:text="Dicionario" />
+
+    <TextView
+        android:id="@+id/speak"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="20sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/text"
+        android:text="@string/botao3"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dictionaire"
+        tools:text="Mensagem falada" />
+
+    <Button
+        android:id="@+id/buttonup"
+        android:layout_width="74dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/ic_arrow_upward_black_24dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonok"
+        app:layout_constraintStart_toStartOf="@id/buttondown" />
+
+    <Button
+        android:id="@+id/buttonok"
+        android:layout_width="74dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/okbutton"
+        android:text="@string/botao5"
+        app:layout_constraintBottom_toTopOf="@id/buttondown"
+
+        app:layout_constraintStart_toStartOf="@id/buttondown" />
+
+
+    <Button
+        android:id="@+id/buttondown"
+        android:layout_width="74dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginEnd="162dp"
+        android:background="@drawable/ic_arrow_downward_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        />
+
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="259dp"
+        android:layout_height="88dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
+
+</android.support.constraint.ConstraintLayout>
