--- a/app/src/main/res/layout/activity_mensagens_prontas.xml
+++ b/app/src/main/res/layout/activity_mensagens_prontas.xml
@@ -45,15 +45,15 @@
         app:layout_constraintTop_toBottomOf="@id/written_message1"/>
 
 
-    <Button
-        android:id="@+id/buttonnext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_contacts_black_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="70dp"
-        app:layout_constraintStart_toEndOf="@id/buttonback" />
+<!--    <Button-->
+<!--        android:id="@+id/buttonnext"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/ic_contacts_black_24dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginBottom="70dp"-->
+<!--        app:layout_constraintStart_toEndOf="@id/buttonback" />-->
 
     <Button
         android:id="@+id/buttonback"
@@ -63,8 +63,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ic_home_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/buttonnext"
+        app:layout_constraintEnd_toStartOf="@+id/buttonsend"
          />
+
+    <Button
+        android:id="@+id/buttonsend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/ic_send_black_24dp"
+        app:layout_constraintStart_toEndOf="@id/buttonback"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    />
 
 
 </android.support.constraint.ConstraintLayout>
