--- a/app/src/main/res/drawable/ic_arrow_downward_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_downward_black_24dp.xml
@@ -1,30 +1,28 @@
-
 <layer-list>
-<item>
+  <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <solid android:color="@color/white">
+      <solid android:color="@color/white">
 
-        </solid>
-        <corners android:radius="30dp" />
-        <padding
-            android:left="10dp"
-            android:top="10dp"
-            android:right="10dp"
-            android:bottom="10dp"
-            />
+      </solid>
+      <corners android:radius="30dp" />
+      <padding
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
     </shape>
-</item>
-<item>
+  </item>
+  <item>
     <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-        <path
-            android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z"
-            android:fillColor="@color/orange"/>
+      android:width="24dp"
+      android:height="24dp"
+      android:viewportWidth="24.0"
+      android:viewportHeight="24.0">
+      <path
+        android:fillColor="@color/orange"
+        android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z" />
     </vector>
-</item>
+  </item>
 
 </layer-list>
