--- a/app/src/main/res/drawable/ic_space_bar_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_space_bar_black_24dp.xml
@@ -1,31 +1,29 @@
 <layer-list>
-<item>
+  <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <solid android:color="@color/white">
+      <solid android:color="@color/white">
 
-        </solid>
-        <corners android:radius="30dp" />
-        <padding
-            android:left="10dp"
-            android:top="10dp"
-            android:right="10dp"
-            android:bottom="10dp"
-            />
+      </solid>
+      <corners android:radius="30dp" />
+      <padding
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
     </shape>
-</item>
-<item>
+  </item>
+  <item>
     <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-        <path
-            android:fillColor="#FF000000"
-            android:pathData="M18,9v4H6V9H4v6h16V9z"
-            />
+      android:width="24dp"
+      android:height="24dp"
+      android:viewportWidth="24.0"
+      android:viewportHeight="24.0">
+      <path
+        android:fillColor="#FF000000"
+        android:pathData="M18,9v4H6V9H4v6h16V9z" />
     </vector>
-</item>
+  </item>
 
 </layer-list>
 
