--- a/app/src/main/res/drawable/okbutton.xml
+++ b/app/src/main/res/drawable/okbutton.xml
@@ -2,14 +2,13 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-<solid android:color="@color/orange">
+  <solid android:color="@color/orange">
 
-</solid>
-<corners android:radius="1000dp" />
-<padding
-    android:left="10dp"
-    android:top="10dp"
-    android:right="10dp"
+  </solid>
+  <corners android:radius="1000dp" />
+  <padding
     android:bottom="10dp"
-    />
+    android:left="10dp"
+    android:right="10dp"
+    android:top="10dp" />
 </shape>
